docs/i18n/zh-Hans/docusaurus-plugin-content-docs/version-0.21/wordpress-plugin.md
---
sidebar_position: 1
sidebar_label: WordPress 插件
title: WordPress 安全插件
description: 在 WordPress 管理界面中运行和审查 AMWScan 检查。
---

# WordPress 安全插件

AMWScan Antimalware Scanner 让 WordPress 管理员无需离开仪表板即可运行和审查 AMWScan 检查。它会将报告、备份、隔离和扫描状态存放在扫描目录之外。

## 选择版本

| 版本 | 下载 | 浏览器文件编辑器 | 恢复隔离文件 |
| --- | --- | --- | --- |
| **AMWScan Antimalware Scanner Lite** | [WordPress.org](https://wordpress.org/plugins/amwscan) | 否 | 否 |
| **AMWScan Antimalware Scanner** | GitHub / `amwscan-X.Y.Z.zip` | 是 | 是 |

Lite 是一个单独的商店安全包：完整功能代码不在归档中，而不是仅被禁用。两个版本都使用 `amwscan` 目录、文本域、设置和数据，因此不能同时激活。切换前，请停用并移除已安装的版本。

## 安装和激活 {#install-and-activate}

1. 下载最新的 WordPress 插件版本。
2. 在 WordPress 中，打开 **Plugins > Add New > Upload Plugin** 并上传发布 ZIP，或者将发布内容复制到 `wp-content/plugins/amwscan`。
3. 激活 **AMWScan Antimalware Scanner**。
4. 打开 **Antimalware > Settings**，确认扫描目标和策略。

该插件要求 PHP 7.4 或更高版本。启用 PHP `zip` 扩展以检查归档并还原可信的 WordPress 核心文件。

## 运行首次扫描

打开 **Antimalware** 并选择 **Run scan now**。扫描通过 WP-Cron 在后台运行；扫描进行时，仪表板会刷新状态和进度。

扫描完成后，选择 **Open report** 以检查每个检测结果。先从仅报告模式开始，这是默认设置：它会记录发现，但不会修改文件。

:::caution

在使用清理、删除或隔离操作前，请逐个审查发现并先做备份。自动文件更改操作需要显式设置，并且每条报告操作都会检查文件是否仍然匹配扫描快照。

:::

## 配置扫描

打开 **Antimalware > Settings** 以设置扫描目标、检测模式、计划和存储位置。扫描策略保持可见，而高级部分可以单独或一起展开。浏览器会记住你留开的部分。

![Antimalware Scanner settings screen](/img/wordpress-plugin/settings.png)

- **Scan policy** 控制扫描模式和默认响应。敏感度滑块从 **Signatures**（告警数量最少）开始，依次经过 **Functions**、**Lite** 和 **Exploits**，最后到达 **Full**（覆盖范围最广）。新安装默认使用 **Lite**。
- **Schedule** 可按每小时、每天两次、每天或每周运行。WP-Cron 依赖站点流量；若需要更稳定的计划，请使用系统调度器运行 `wp cron event run --due-now`。
- **Scope and limits** 允许你定义过滤器，并可选择启用有限的 ZIP 检查。默认情况下，手动和计划扫描都关闭归档扫描，因为大型归档可能消耗大量资源。
- **AI 检测结果审查** 可选择将每个恶意软件检测结果周围长度受限的摘录发送给 AI 提供商。此功能默认禁用，判定仅供参考。安装官方 [WordPress AI 插件](https://wordpress.org/plugins/ai/) 即可启用推荐的 **WordPress AI / 已配置连接器** 选项。在 **设置 → Connectors** (`wp-admin/options-connectors.php`) 中配置提供商，并在 **设置 → AI** (`wp-admin/options-general.php?page=ai-wp-admin`) 中管理 AI 插件功能。AMWScan 会从已配置的 WordPress AI 连接器注册表中动态获取兼容的文本生成模型；Automatic 使用 WordPress AI 可筛选的首选模型回退列表。此方式会使用连接器凭据和审批，而无需在 AMWScan 中存储另一个密钥。OpenAI、Anthropic 和 Gemini 的直接 API 配置仍可用作高级回退方案。
- **WordPress Abilities API** 集成会根据可用功能自动检测，并且是可选的。管理员和获准的 REST/MCP 客户端可以读取扫描状态、列出尚未解决的发现，并获取单个发现的摘要。这些功能绝不会包含代码摘录，也不能启动扫描或执行修复。
- **Engine and storage** 管理私有报告、备份、隔离和定义缓存的位置。将这些位置保留在你扫描的站点文件之外。

## 审查和修复发现

报告会在 **Security findings** 下列出完整性、漏洞和声誉检查。代码和签名匹配会在 **Malware detections** 下显示一次，并且最初每个检测都会折叠，以便更容易浏览。指向或聚焦某个发现可显示其行操作。安全发现提供 **Add exception**、**Reopen** 和可信文件还原；恶意软件检测提供 **Take action** 和 **Report finding**。需要重新扫描或已处理的发现会保留可见但禁用的选择框。

报告历史支持行选择和批量操作。将较旧报告移动到 **Archived**，再在永久删除前进行检查；归档报告可在删除前随时恢复。

自动清理、隔离和删除操作都需要确认。Lite 不接受浏览器代码编辑，隔离文件只能从 **Antimalware > Quarantine** 中永久删除。Full 版本增加了基于差异的浏览器编辑器和隔离文件恢复功能。若文件在扫描后发生变化，该操作将被拒绝，因此请在处理陈旧结果前再次运行扫描。

## 保护 WordPress 上传

在 **Settings > Scan policy** 中，**Scan and block malicious WordPress uploads** 默认启用。它会在 WordPress 接受文件前检查媒体上传和插件或主题 ZIP。存在检测结果，或者没有权威扫描覆盖范围的文件会被阻止，并记录到报告中供审查。

只有在另一项上传安全控制负责相同保护时，才应禁用此功能。

## 帮助和诊断

插件的 **About** 页面显示已安装插件和引擎版本，以及文档、支持、贡献指南和许可的链接。对于 FTP 或 FTPS 扫描，请在设置中配置不含凭据的服务器 URL，并通过 `AMWSCAN_FTP_PASSWORD` 环境变量提供密码；插件不会将 FTP 密码保存到 WordPress 选项中。

有关开发、测试和发布流程，请参见 [插件 README](https://github.com/marcocesarato/PHP-Antimalware-Scanner/tree/master/plugins/wordpress)。

## 完整界面图库

以下截图使用安全的示例数据展示主要管理页面。

![显示每日扫描活动和安全概览的 AMWScan 仪表盘](/img/wordpress-plugin/dashboard.png)

仪表盘汇总手动和定时扫描、近期结果以及扫描器状态。

WordPress 主仪表板还包含 **Antimalware Scanner** 小工具，可显示扫描器状态、最近一次扫描结果、已存储的流量匹配项，以及打开控制台或启动扫描的快捷操作。

![WordPress 仪表板中的 Antimalware Scanner 小工具，显示状态、最近结果、流量匹配项和快捷操作](/img/wordpress-plugin/dashboard-widget.png)

![显示证据和处置操作的 AMWScan 展开扫描报告](/img/wordpress-plugin/scan-report.png)

展开报告集中显示严重程度、匹配内容、源代码上下文和处置操作，便于操作前核查。

![显示耗时、文件数和检测数的 AMWScan 报告历史](/img/wordpress-plugin/reports.png)

报告历史记录以往扫描、持续时间、已检查文件数和检测到的威胁。

![显示隔离文件和控制项的 AMWScan 隔离区](/img/wordpress-plugin/quarantine.png)

隔离区显示已隔离文件、相关元数据以及安全删除或可用的恢复操作。

![显示已审核匹配项和控制项的 AMWScan 白名单](/img/wordpress-plugin/whitelist.png)

白名单保留已审核的可信结果，也可移除条目以便重新评估。

![用于计划、通知、扫描范围和备份的 AMWScan 高级设置](/img/wordpress-plugin/settings.png)

展开的设置页面显示计划、通知、文件覆盖范围、可恢复扫描、备份和日志记录。

![显示版本、项目资源和支持链接的 AMWScan 关于页面](/img/wordpress-plugin/about.png)

关于页面标明已安装版本，并提供文档、支持和项目资源的直接链接。

## 监控可疑流量

在 **反恶意软件 > 设置 > 流量检测** 中启用 **请求监控**。被动监控器使用保守的内置启发式规则，还可以将 IP 地址、CIDR 范围、域名、URL、路径和 `ua:` 片段与本地文本或 CSV 指标文件进行匹配。

打开 **反恶意软件 > 流量**，查看七天严重性和类别摘要，筛选最近的检测，并下载经过无害化处理的 CSV 调查导出。

![流量控制台显示监控状态、严重性总数、趋势、筛选器和最近的可疑请求](/img/wordpress-plugin/traffic.png)

控制台集中显示监控状态、已加载指标数量、趋势和请求证据。导出前可使用严重性、类别、日期和搜索筛选器缩小调查范围。

监控器不会阻止访问者，只能检查到达 WordPress 的请求。查询字符串会被丢弃，地址会缩减为网络前缀，重复检测会被抑制五分钟。
